--- a/Application_Manus_Interface/Application_Manus_Interface.vcxproj.filters
+++ b/Application_Manus_Interface/Application_Manus_Interface.vcxproj.filters
@@ -19,4 +19,14 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CRPI_Android_interface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="universal_ur5.xml">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
